--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Defense Commander</string>
+    <string name="back_ground">Back Ground</string>
+    <string name="title">title</string>
+    <string name="title_image">Title Image</string>
 </resources>
