--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="back_ground">Back Ground</string>
     <string name="title">title</string>
     <string name="title_image">Title Image</string>
+    <string name="base">base</string>
 </resources>
