Set game over fade in title.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="base">base</string>
     <string name="score">score</string>
     <string name="level">level</string>
+    <string name="title_gameOver">Title gameover</string>
 </resources>
