--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="score">score</string>
     <string name="level">level</string>
     <string name="title_gameOver">Title gameover</string>
+    <string name="exit">Exit</string>
+    <string name="top_players">Top Players</string>
+    <string name="player_info">Player Info</string>
 </resources>
